update travis, Add PHP 7.4 and CakePHP 3.9, Drop PHP 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ services:
 
 php:
   - 5.6
-  - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 sudo: false
 
 env:
   matrix:
-    - CAKE_VERSION='3.7.*'
     - CAKE_VERSION='3.8.*'
+    - CAKE_VERSION='3.9.*'
   global:
     - DEFAULT=1 DB=mysql db_dsn='mysql://root@0.0.0.0/cakephp_test'
 
@@ -36,6 +36,10 @@ matrix:
     env: CAKE_VERSION='3.6.*'
   - php: 7.2
     env: CAKE_VERSION='3.6.*'
+  - php: 5.6
+    env: CAKE_VERSION='3.7.*'
+  - php: 7.3
+    env: CAKE_VERSION='3.7.*'
 
   - php: 7.3
     env: PHPCS=1 DEFAULT=0
