--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,14 @@ name: CakePHP Plugin CI
 on:
   push:
     branches:
-      - github-actions
-      - master
+      - cake3
   pull_request:
     branches:
       - '*'
   schedule:
     - cron: "0 7 1 * *"
       branches:
-        - master
+        - cake3
 
 jobs:
   testsuite:
