--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CakePHP Plugin CI
 on:
   push:
     branches:
+      - cake4
       - cake3
   pull_request:
     branches:
@@ -10,6 +11,7 @@ on:
   schedule:
     - cron: "0 7 1 * *"
       branches:
+        - cake4
         - cake3
 
 jobs:
@@ -18,47 +20,58 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cakephp-version: ['3.8.*', '3.9.*', '3.10.*']
-        php-version: ['7.2', '7.4']
+        cakephp-version: ['4.4.*']
+        php-version: ['7.4', '8.0', '8.1']
         db-type: ['mysql']
         prefer-lowest: ['']
         coverage: ['no']
         include:
-          - cakephp-version: '3.5.*'
-            php-version: '5.6'
-            db-type: 'mysql:5.6'
-            prefer-lowest: ''
-            coverage: 'no'
-          - cakephp-version: '3.5.*'
+          - cakephp-version: '4.0.*'
             php-version: '7.2'
-            db-type: 'mysql:5.6'
+            db-type: 'mysql:5.7'
+            prefer-lowest: 'prefer-lowest'
+            coverage: 'no'
+          - cakephp-version: '4.0.*'
+            php-version: '8.0'
+            db-type: 'mysql'
             prefer-lowest: ''
             coverage: 'no'
 
-          - cakephp-version: '3.6.*'
-            php-version: '5.6'
-            db-type: 'mysql:5.6'
-            prefer-lowest: ''
-            coverage: 'no'
-          - cakephp-version: '3.6.*'
+          - cakephp-version: '4.1.*'
             php-version: '7.2'
-            db-type: 'mysql:5.6'
+            db-type: 'mysql:5.7'
+            prefer-lowest: 'prefer-lowest'
+            coverage: 'no'
+          - cakephp-version: '4.1.*'
+            php-version: '8.0'
+            db-type: 'mysql'
             prefer-lowest: ''
             coverage: 'no'
 
-          - cakephp-version: '3.7.*'
-            php-version: '5.6'
-            db-type: 'mysql:5.6'
-            prefer-lowest: ''
+          - cakephp-version: '4.2.*'
+            php-version: '7.2'
+            db-type: 'mysql:5.7'
+            prefer-lowest: 'prefer-lowest'
             coverage: 'no'
-          - cakephp-version: '3.7.*'
-            php-version: '7.3'
-            db-type: 'mysql:5.6'
+          - cakephp-version: '4.2.*'
+            php-version: '8.0'
+            db-type: 'mysql'
             prefer-lowest: ''
             coverage: 'no'
 
-          - php-version: '7.4'
-            cakephp-version: '3.10.*'
+          - cakephp-version: '4.3.*'
+            php-version: '7.2'
+            db-type: 'mysql:5.7'
+            prefer-lowest: 'prefer-lowest'
+            coverage: 'no'
+          - cakephp-version: '4.3.*'
+            php-version: '8.1'
+            db-type: 'mysql'
+            prefer-lowest: ''
+            coverage: 'no'
+
+          - php-version: '8.1'
+            cakephp-version: '4.4.*'
             db-type: 'mysql'
             prefer-lowest: ''
             coverage: 'coverage'
@@ -66,11 +79,11 @@ jobs:
     steps:
       - name: Setup MySQL latest
         if: matrix.db-type == 'mysql'
-        run: docker run --rm --name=mysqld -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=cakephp -p 3306:3306 -d mysql --default-authentication-plugin=mysql_native_password --disable-log-bin
+        run: docker run --rm --name=mysqld -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=cakephp_test -p 3306:3306 -d mysql --default-authentication-plugin=mysql_native_password --disable-log-bin
 
-      - name: Setup MySQL 5.6
-        if: matrix.db-type == 'mysql:5.6'
-        run: docker run --rm --name=mysqld -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=cakephp -p 3306:3306 -d mysql:5.6 --character-set-server=utf8
+      - name: Setup MySQL 5.7
+        if: matrix.db-type == 'mysql:5.7'
+        run: docker run --rm --name=mysqld -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=cakephp_test -p 3306:3306 -d mysql:5.7 --character-set-server=utf8 --default-authentication-plugin=mysql_native_password --disable-log-bin
 
       - uses: actions/checkout@v3
         with:
@@ -107,9 +120,11 @@ jobs:
         run: |
           composer require cakephp/cakephp:${{ matrix.cakephp-version }}
 
-      - name: composer install
+      - name: Composer install
         run: |
-          if ${{ matrix.prefer-lowest == 'prefer-lowest' }}; then
+          if [[ ${{ matrix.php-version }} == '8.1' ]]; then
+            composer update --ignore-platform-reqs
+          elif ${{ matrix.prefer-lowest == 'prefer-lowest' }}; then
             composer update --prefer-lowest --prefer-stable
           else
             composer update
@@ -124,9 +139,9 @@ jobs:
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
           MEMCACHED_PORT: ${{ job.services.memcached.ports['11211'] }}
         run: |
-          if [[ ${{ matrix.db-type }} == 'sqlite' ]]; then export db_dsn='sqlite:///:memory:'; fi
-          if [[ ${{ matrix.db-type }} == 'mysql' ]]; then export db_dsn='mysql://root:root@127.0.0.1/cakephp?init[]=SET sql_mode = "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"'; fi
-          if [[ ${{ matrix.db-type }} == 'mysql:5.6' ]]; then export db_dsn='mysql://root:root@127.0.0.1/cakephp?encoding=utf8'; fi
+          if [[ ${{ matrix.db-type }} == 'sqlite' ]]; then export DB_URL='sqlite:///:memory:'; fi
+          if [[ ${{ matrix.db-type }} == 'mysql' ]]; then export DB_DSN='mysql://root:root@127.0.0.1/cakephp_test?encoding=utf8mb4&init[]=SET sql_mode = "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"'; fi
+          if [[ ${{ matrix.db-type }} == 'mysql:5.7' ]]; then export DB_DSN='mysql://root:root@127.0.0.1/cakephp_test?encoding=utf8mb4&init[]=SET sql_mode = "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"'; fi
 
           if [[ ${{ matrix.coverage }} == 'coverage' ]]; then
             export CODECOVERAGE=1 && vendor/bin/phpunit --stderr --verbose --coverage-clover=coverage.xml
@@ -150,7 +165,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: '8.1'
           extensions: mbstring, intl, apcu
           coverage: none
 
@@ -169,7 +184,7 @@ jobs:
           key: ${{ runner.os }}-composer-${{ steps.key-date.outputs.date }}-${{ hashFiles('composer.json') }}-${{ matrix.prefer-lowest }}
 
       - name: Get CodeSniffer
-        run: composer require cakephp/cakephp-codesniffer:^3.0
+        run: composer require cakephp/cakephp-codesniffer:^4.0
       #
       #      - name: composer install
       #        run: composer stan-setup
