--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "description": "A cron job runner for CakePHP",
     "type": "cakephp-plugin",
     "require": {
-        "php": ">=5.6",
-        "cakephp/cakephp": "^3.5",
-        "lavary/crunz": "^1.12"
+        "php": ">=7.2",
+        "cakephp/cakephp": "^4.0",
+        "lavary/crunz": "^2.3 || ^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0",
-        "cakephp/cakephp-codesniffer": "^3.1"
+        "phpunit/phpunit": "^8.5 || ^9.3",
+        "cakephp/cakephp-codesniffer": "^4.6"
     },
     "autoload": {
         "psr-4": {
@@ -20,6 +20,7 @@
     "autoload-dev": {
         "psr-4": {
             "Elastic\\CronJobs\\Test\\": "tests",
+            "TestApp\\": "tests/test_app/TestApp",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     }
