--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
             "TestApp\\": "tests/test_app/TestApp",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
